syntax = "proto3";

import "google/protobuf/empty.proto";

package v1.ha_cluster_agent;

// Service for managing cluster-agent rpc calls
service HaRpc {
  rpc RegisterNodeAgent (HaNodeInfo) returns (google.protobuf.Empty) {}
  rpc ReportFailedNvmePaths (ReportFailedNvmePathsRequest) returns (google.protobuf.Empty) {}
}

// Node information
message HaNodeInfo {
    string nodename = 1;
    string endpoint = 2;
}

// Failed NVMe path.
message FailedNvmePath {
  // NQN of the NVMe target to which this path is connected.
  string target_nqn = 1;
}

// Failed paths message.
message ReportFailedNvmePathsRequest {
  // Node which reports failed paths.
  string nodename = 1;

  // List of failed
  repeated FailedNvmePath failed_paths = 4;
}

// Service for managing node-agent rpc calls
service HaNodeRpc {
  rpc ReplacePath (ReplacePathRequest) returns (google.protobuf.Empty) {}
}

// Path replacement message.
message ReplacePathRequest {
  // NQN of the target
  string target_nqn = 1;

  // URI of the new path
  string new_path = 2;
}